--- a/group/Base.lproj/Main.storyboard
+++ b/group/Base.lproj/Main.storyboard
@@ -206,7 +206,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="EpP-ZL-hcF">
-                                <rect key="frame" x="20" y="44" width="374" height="729"/>
+                                <rect key="frame" x="20" y="88" width="374" height="685"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uhO-g8-zMF">
@@ -282,6 +282,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="BHx-Ux-nBx">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <navigationBarAppearance key="standardAppearance">
+                            <color key="backgroundColor" red="0.12509779239999999" green="0.2007036227" blue="0.057008895699999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </navigationBarAppearance>
                     </navigationBar>
                     <connections>
                         <segue destination="gOe-JP-IvD" kind="relationship" relationship="rootViewController" id="Ty4-27-Qbo"/>
@@ -393,14 +397,29 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HSX-mG-w83">
+                                <rect key="frame" x="0.0" y="774" width="414" height="44"/>
+                                <items>
+                                    <barButtonItem title="Item" id="lfa-Wg-zr8"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="18Y-UF-vQE"/>
+                                    <barButtonItem title="Item" id="9OF-Wp-uaY"/>
+                                </items>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <toolbarAppearance key="standardAppearance">
+                                    <color key="backgroundColor" red="0.12509779239999999" green="0.2007036227" blue="0.057008895699999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </toolbarAppearance>
+                            </toolbar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="5gg-ho-BUN"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="5gg-ho-BUN" firstAttribute="trailing" secondItem="hkw-NN-vqM" secondAttribute="trailing" constant="92" id="73E-eQ-z86"/>
                             <constraint firstItem="hkw-NN-vqM" firstAttribute="leading" secondItem="5gg-ho-BUN" secondAttribute="leading" constant="81" id="MwV-jZ-k5B"/>
+                            <constraint firstItem="HSX-mG-w83" firstAttribute="leading" secondItem="5gg-ho-BUN" secondAttribute="leading" id="WVb-zd-f5p"/>
                             <constraint firstItem="hkw-NN-vqM" firstAttribute="top" secondItem="5gg-ho-BUN" secondAttribute="top" constant="313" id="bUi-5f-vsn"/>
+                            <constraint firstItem="HSX-mG-w83" firstAttribute="trailing" secondItem="5gg-ho-BUN" secondAttribute="trailing" id="kCy-ac-fK6"/>
                             <constraint firstItem="5gg-ho-BUN" firstAttribute="bottom" secondItem="hkw-NN-vqM" secondAttribute="bottom" constant="387" id="qb4-ZZ-ynC"/>
+                            <constraint firstItem="HSX-mG-w83" firstAttribute="bottom" secondItem="5gg-ho-BUN" secondAttribute="bottom" id="zYd-Wj-64K"/>
                         </constraints>
                     </view>
                     <connections>
@@ -415,7 +434,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="R9s-IV-2ec"/>
         <segue reference="1Pu-3Y-Bve"/>
-        <segue reference="0eJ-by-IIJ"/>
+        <segue reference="Ty4-27-Qbo"/>
     </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="systemBackgroundColor">
